force-app/main/default/objects/vlocity_ins__OrchestrationItemLog__b/fields/vlocity_ins__OrchestrationItemType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OrchestrationItemType__c</fullName>
    <description>The orchestration item&apos;s type. Possible values include Callout, Push Event, Auto Task, Milestone, Manual Task.</description>
    <label>Orchestration Item Type</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>