force-app/main/default/objects/vlocity_ins__OrchestrationItemLog__b/fields/vlocity_ins__SystemInterfaceId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SystemInterfaceId__c</fullName>
    <description>The system interface associated with the orchestration item log.</description>
    <label>System Interface</label>
    <referenceTo>vlocity_ins__SystemInterface__c</referenceTo>
    <relationshipLabel>Orchestration Item Log</relationshipLabel>
    <relationshipName>SystemInterface</relationshipName>
    <type>Lookup</type>
</CustomField>