force-app/main/default/objects/vlocity_ins__OrchestrationItemLog__b/fields/vlocity_ins__TimestampCompleted__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TimestampCompleted__c</fullName>
    <description>The date and time the orchestration item was moved to the Completed state.</description>
    <label>Timestamp (Completed)</label>
    <type>DateTime</type>
</CustomField>